--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
   },
   "extra": {
     "branch-alias": {
-      "master": "1.1.x-dev"
+      "dev-master": "2.3.x-dev"
     }
   },
   "autoload": {
