--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   ],
   "require": {
     "php": "~7.4",
-    "vendor/guzzlehttp/guzzle": "^6.5.5",
+    "guzzlehttp/guzzle": "^6.5.5",
     "ext-json": "*"
   },
   "config": {
