--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,12 @@
     }
   ],
   "require": {
-    "php": "~7.4",
+    "php": "^7.4 || ^8.0",
     "guzzlehttp/guzzle": "^6.5.5",
     "ext-json": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "9.3.0.*"
   },
   "config": {
     "preferred-install": "dist",
